[package]
name = "aoc-runtime"
version = "0.3.2" # also defined in flake.nix
edition = "2024"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
anyhow = "1.0.98"
aoc_api = "2.0.0"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
colored = "3.0.0"
regex = "1.11.1"
strum = "0.27.2"
strum_macros = "0.27.2"

[[bin]]
name = "aoc" # also defined in flake.nix
path = "src/main.rs"
